package edu.masanz.da.torneo;

public class Main {

    public static void main(String[] args) {
//        edu.masanz.da.torneo.web.Main.main(args);
        edu.masanz.da.torneo.term.Main.main(args);
    }

}