package edu.masanz.da.torneo.config;

public class Config {

    public static final int ROL_ADMIN_ID = 5;
    public static final int ROL_ARBIT_ID = 4;
    public static final int ROL_EQUIPO_ID = 3;
    public static final int ROL_JUGAD_ID = 2;
    public static final int ROL_ESPEC_ID = 1;
    public static final int ROL_NOHAY_ID = 0;

    public static final String ROL_ADMIN = "Administrador";
    public static final String ROL_ARBIT = "Árbitro";
    public static final String ROL_EQUIPO = "Equipo";
    public static final String ROL_JUGAD = "Jugador";
    public static final String ROL_ESPEC = "Espectador";
    public static final String ROL_NOHAY = "Sin rol";

    public static final String FRM_PAR_ACCION = "accion";
    public static final String FRM_PAR_TORNEO = "torneo";
    public static final String FRM_PAR_NOMBRE_TORNEO = "nombreTorneo";
    public static final String FRM_PAR_EQUIPO = "equipo";
    public static final String FRM_PAR_NOMBRE_EQUIPO = "nombreEquipo";
    public static final String FRM_PAR_USUARIO = "usuario";
    public static final String FRM_PAR_ARBITRO = "arbitro";
    public static final String FRM_PAR_ALIAS = "alias";
    public static final String FRM_PAR_PASSWORD = "password";
    public static final String FRM_PAR_ROL = "rol";
    public static final String FRM_VAL_USUARIO_NINGUNO = "ninguno";

    public static final String SES_ATT_ALIAS_USUARIO = "aliasUsuario";
    public static final String SES_ATT_ROL_USUARIO = "rolUsuario";
    public static final String SES_ATT_ID_TORNEO = "idTorneo";
    public static final String SES_ATT_NOMBRE_TORNEO = "nombreTorneo";

    public static final String MENU_REGRESAR = "Regresar";
    public static final String MENU_SALIR = "Salir";

    public static final String MENU_ACCION_VER_RESULTADOS = "Ver resultados";
    public static final String MENU_ACCION_AVANZAR_FASE = "Avanzar fase";
    public static final String MENU_ACCION_CREAR_TORNEO = "Crear torneo";
    public static final String MENU_ACCION_GESTIONAR_EQUIPOS = "Gestionar equipos";
    public static final String MENU_ACCION_GESTIONAR_USUARIOS = "Gestionar usuarios";
    public static final String MENU_ACCION_BORRAR_TORNEO = "Borrar torneo";
    public static final String MENU_ACCION_SALIR = "Salir";

    public static final String MENU_ACCION_REGRESAR = "Regresar";

    public static final String MENU_AVANZAR_REVOLVER = "Revolver";
    public static final String MENU_AVANZAR_EMPEZAR = "Empezar";
    public static final String MENU_AVANZAR_REGRESAR = "Regresar";
    public static final String MENU_AVANZAR_SALIR = "Salir";
    public static final String MENU_AVANZAR_AVANZAR = "Avanzar";
    public static final String MENU_AVANZAR_TERMINAR = "Terminar";

    public static final String MENU_USUARIOS_BORRAR = "Borrar";
    public static final String MENU_USUARIOS_CAMBIAR = "Cambiar";
    public static final String MENU_USUARIOS_AGREGAR = "Agregar";

    public static final String FASE_TERMINADO = "Terminado";
    public static final String FASE_FINAL = "Final";
    public static final String FASE_TERCER_CUARTO = "Tercer y cuarto puesto";
    public static final String FASE_SEMIFINALES = "Semifinales";
    public static final String FASE_CUARTOS = "Cuartos";
    public static final String FASE_SIN_EMPEZAR = "Sin empezar";
    public static final int FASE_TERMINADO_ID = 5;
    public static final int FASE_FINAL_ID = 4;
    public static final int FASE_TERCER_CUARTO_ID = 3;
    public static final int FASE_SEMIFINALES_ID = 2;
    public static final int FASE_CUARTOS_ID = 1;
    public static final int FASE_SIN_EMPEZAR_ID = 0;
}
